--- a/back-end/project-capstone/03-nus-order-matching-service/03-order-matching-service/src/main/resources/application.yml
+++ b/back-end/project-capstone/03-nus-order-matching-service/03-order-matching-service/src/main/resources/application.yml
@@ -34,3 +34,10 @@ management:
     web:
       exposure:
         include: "*"
+
+keycloak:
+  auth-server-url: https://oauth.omni-trade.xyz:8180
+  principal-attribute: preferred_username
+  realm: IamOrderMatching
+  public-client: 'true'
+  resource: iam-ordermatching
