--- a/.github/workflows/deploy-production-frontend.yml
+++ b/.github/workflows/deploy-production-frontend.yml
@@ -5,8 +5,8 @@ on:
       - production/frontend
 
 env:
-  DEPLOY_DIRECTORY: /mnt/disks/staging-data/react/dashboard/build
-  
+  DEPLOY_DIRECTORY: /var/www/swe5005/frontend
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -27,7 +27,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: staging-deploy
-          path: build
+          path: dist
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -44,7 +44,7 @@ jobs:
       - name: Adding Known Hosts
         run: ssh-keyscan -H ${{ secrets.STAGING_HOST }} >> ~/.ssh/known_hosts
       - name: Deploy with rsync
-        run: rsync -avz ./ ${{ secrets.STAGING_SSH_USERNAME }}@${{ secrets.STAGING_HOST }}:$DEPLOY_DIRECTORY
+        run: rsync -avzb --backup-dir=$DEPLOY_DIRECTORY../frontend_backup --delete ./ ${{ secrets.STAGING_SSH_USERNAME }}@${{ secrets.STAGING_HOST }}:$DEPLOY_DIRECTORY
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@master
         env:
