--- a/.github/workflows/deploy-production-frontend.yml
+++ b/.github/workflows/deploy-production-frontend.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Share artifact inside workflow
         uses: actions/upload-artifact@v3
         with:
-          name: staging-deploy
-          path: dist
+          name: production-deploy
+          path: front-end/dist
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -36,7 +36,7 @@ jobs:
       - name: Get artifact
         uses: actions/download-artifact@v3
         with:
-          name: staging-deploy
+          name: production-deploy
       - name: Install SSH Key
         uses: shimataro/ssh-key-action@v2
         with:
