--- a/.github/workflows/deploy-production-frontend.yml
+++ b/.github/workflows/deploy-production-frontend.yml
@@ -48,7 +48,7 @@ jobs:
         run: rsync -avzb --backup-dir=$DEPLOY_DIRECTORY../frontend_backup --delete ./ ${{ secrets.STAGING_SSH_USERNAME }}@${{ secrets.STAGING_HOST }}:$DEPLOY_DIRECTORY
       - name: Timestamping deployment
         run: |
-          cd $DEPLOY_DIRECTORY
-          pwd
-          touch deployment_info.txt
-          echo "Commit $SHA deployed at $(TZ=":Asia/Singapore" date)" > deployment_info.txt
+          ssh ${{ secrets.STAGING_SSH_USERNAME }}@${{ secrets.STAGING_HOST }} "
+            cd $DEPLOY_DIRECTORY && git fetch && git reset --hard origin/master
+            echo "Commit $SHA deployed at $(TZ=":Asia/Singapore" date)" > deployment_info.txt
+          "
