--- a/back-end/project-capstone/03-nus-order-matching-service/03-order-matching-service/src/main/resources/application.yml
+++ b/back-end/project-capstone/03-nus-order-matching-service/03-order-matching-service/src/main/resources/application.yml
@@ -41,3 +41,9 @@ keycloak:
   realm: IamOrderMatching
   public-client: 'true'
   resource: iam-ordermatching
+
+logging:
+  level:
+    org:
+      springframework:
+        security: INFO
