--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.22.4",
+    "keycloak-js": "^19.0.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vuejs-logger": "^1.5.5",
     "vuetify": "^2.6.5",
     "vuex": "^3.6.2"
   },
