[devops] Update Caddyfile configuration and removed unused port in Docker Compose file

--- a/devops/caddy/volumes/caddy/Caddyfile
+++ b/devops/caddy/volumes/caddy/Caddyfile
@@ -1,13 +1,13 @@
-https://oauth.omni-trade.xyz:8180 {
+https://oauth.omni-trade.xyz {
 	handle {
-		reverse_proxy keycloak:8080 {
+		reverse_proxy 10.0.0.19:8080 {
 		}
 	}
 }
 
 https://orders.omni-trade.xyz {
         handle {
-                reverse_proxy orders:8080 {
+                reverse_proxy 10.0.0.19:8880 {
                 }
         }
 }
