[devops] Update order matching app configuration for Docker

--- a/back-end/project-capstone/03-nus-order-matching-service/03-order-matching-service/src/main/resources/application-docker.yml
+++ b/back-end/project-capstone/03-nus-order-matching-service/03-order-matching-service/src/main/resources/application-docker.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 8880
 
 cloud:
   aws:
@@ -30,3 +30,10 @@ management:
     web:
       exposure:
         include: "*"
+
+keycloak:
+  auth-server-url: https://oauth.omni-trade.xyz:8180
+  principal-attribute: preferred_username
+  realm: IamOrderMatching
+  public-client: 'true'
+  resource: iam-ordermatching
