--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,47 @@
-version: '3.9'
+version: "3.9"
+
 services:
-  elasticmq:
-    image: softwaremill/elasticmq-native
-    ports:
-      - '9324:9324'
-      - '9325:9325'
-    volumes:
-      - ./docker/volumes/elasticmq/elasticmq.conf:/opt/elasticmq.conf
+#  elasticmq:
+#    image: softwaremill/elasticmq-native
+#    ports:
+#      - '9324:9324'
+#      - '9325:9325'
+#    volumes:
+#      - ./volumes/elasticmq/elasticmq.conf:/opt/elasticmq.conf
+#    networks:
+#      - https_proxy
+#      - project_capstone
   postgresql:
     image: postgres
     environment:
-      POSTGRES_PASSWORD: omnitrade
-      POSTGRES_USER: omnitrade
-      POSTGRES_DB: omnitrade
+      - POSTGRES_PASSWORD=keycloak
+      - POSTGRES_USER=keycloak
+      - POSTGRES_DB=keycloak
     ports:
-      - "5432:5432"
+      - 5432:5432
     volumes:
       - ./docker/volumes/postgres/data:/var/lib/postgresql/data
-  accounts:
-    image: maven:3.8-jdk-11
-    depends_on:
-      - mysql
-    entrypoint: [ "/bin/bash", "-c" ]
-    command:
-      - |
-        cd /var/www/app
-        mvn -f ./02-account-mgt-service/pom.xml -B --no-transfer-progress -Dmaven.test.skip=true install
-        mvn -f ./02-account-mgt-service/pom.xml -e -P docker spring-boot:run
+  keycloak:
+    image: bitnami/keycloak:19
+    depends_on: [ 'postgresql' ]
+    environment:
+      - TZ=Asia/Singapore
+      - KEYCLOAK_DATABASE_HOST=postgresql
+      - KEYCLOAK_DATABASE_NAME=keycloak
+      - KEYCLOAK_DATABASE_USER=keycloak
+      - KEYCLOAK_DATABASE_PASSWORD=keycloak
+      - KEYCLOAK_ADMIN_USER=user
+      - KEYCLOAK_ADMIN_PASSWORD=EsF^I2Y9kV0*
     ports:
-      - '8081:8080'
+      - 8180:8180
+      - 8080:8080
     volumes:
-      - ./back-end/project-capstone/02-nus-account-mgt-service:/var/www/app
-      - maven-repository:/root/.m2
+      - ./docker/volumes/keycloak/configuration:/bitnami/keycloak/configuration
   orders:
     image: maven:3.8-jdk-11
     depends_on:
-      - accounts
-      - mysql
-      - elasticmq
+      - keycloak
+      # - elasticmq
     entrypoint: [ "/bin/bash", "-c" ]
     command:
       - |
@@ -47,10 +51,10 @@ services:
         mvn -f ./03-order-matching-service/pom.xml -B --no-transfer-progress -Dmaven.test.skip=true install
         mvn -f ./03-order-matching-service/pom.xml -e -P docker spring-boot:run
     ports:
-      - '8080:8080'
+      - 8880:8880
     volumes:
       - ./back-end/project-capstone/03-nus-order-matching-service:/var/www/app
-      - maven-repository:/root/.m2
+      - .maven-repository:/root/.m2
   # web_frontend:
   #   image: node:16
   #   entrypoint: [ "/bin/bash", "-c" ]
