--- a/front-end/.env
+++ b/front-end/.env
@@ -1,2 +1,3 @@
-VUE_APP_ENDPOINT_ORDERS=http://127.0.0.1:8080
-VUE_APP_ENDPOINT_ACCOUNTS=http://127.0.0.1:8081
+VUE_APP_ENDPOINT_ORDERS=https://localhost:8080
+VUE_APP_ENDPOINT_ACCOUNTS=https://localhost:8081
+VUE_APP_ENDPOINT_OAUTH_REDIRECT_URI=http://localhost:8888/login/oauth
