--- a/front-end/.env.production
+++ b/front-end/.env.production
@@ -1,2 +1,3 @@
 VUE_APP_ENDPOINT_ORDERS=https://orders.omni-trade.xyz
 VUE_APP_ENDPOINT_ACCOUNTS=https://accounts.omni-trade.xyz
+VUE_APP_ENDPOINT_OAUTH_REDIRECT_URI=https://www.omni-trade.xyz/login/oauth
