--- a/front-end/.env
+++ b/front-end/.env
@@ -1,3 +1,5 @@
 VUE_APP_ENDPOINT_ORDERS=https://localhost:8080
 VUE_APP_ENDPOINT_ACCOUNTS=https://localhost:8081
+# NOTE Ensure this matches Web Origins in Keycloak!
+VUE_APP_ENDPOINT_OAUTH=https://oauth.omni-trade.xyz
 VUE_APP_ENDPOINT_OAUTH_REDIRECT_URI=http://localhost:8888/login/oauth
