--- a/back-end/project-capstone/03-nus-order-matching-service/03-order-matching-service/pom.xml
+++ b/back-end/project-capstone/03-nus-order-matching-service/03-order-matching-service/pom.xml
@@ -102,6 +102,11 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
