[chore] Use Community Material Theme Darker High Contrast theme so that it's easier to read for old people like me

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "java.configuration.updateBuildConfiguration": "automatic",
-    "workbench.colorTheme": "Community Material Theme Darker"
+    "workbench.colorTheme": "Community Material Theme Darker High Contrast"
 }
