--- a/back-end/project-capstone/03-nus-order-matching-service/03-order-matching-service/src/main/resources/application-docker.yml
+++ b/back-end/project-capstone/03-nus-order-matching-service/03-order-matching-service/src/main/resources/application-docker.yml
@@ -32,7 +32,7 @@ management:
         include: "*"
 
 keycloak:
-  auth-server-url: https://oauth.omni-trade.xyz:8180
+  auth-server-url: https://oauth.omni-trade.xyz
   principal-attribute: preferred_username
   realm: IamOrderMatching
   public-client: 'true'
