[fix] Made orders service working with keycloak
1. Removed @PreAuthorized annotations because it is unnecessary; we will use path-based configuration in SecurityConfig.java
2. Disabled cookies issued by Spring Boot in SecurityConfig.java
3. Only verify bearer token before accessing resources, and do not redirect users to login page

--- a/back-end/project-capstone/03-nus-order-matching-service/03-order-matching-service/src/main/resources/application-docker.yml
+++ b/back-end/project-capstone/03-nus-order-matching-service/03-order-matching-service/src/main/resources/application-docker.yml
@@ -37,3 +37,11 @@ keycloak:
   realm: IamOrderMatching
   public-client: 'true'
   resource: iam-ordermatching
+  use-resource-role-mappings : false
+  bearer-only: true
+
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
