--- a/back-end/project-capstone/03-nus-order-matching-service/03-order-matching-service/src/main/resources/application.yml
+++ b/back-end/project-capstone/03-nus-order-matching-service/03-order-matching-service/src/main/resources/application.yml
@@ -36,11 +36,13 @@ management:
         include: "*"
 
 keycloak:
-  auth-server-url: https://oauth.omni-trade.xyz:8180
+  auth-server-url: https://oauth.omni-trade.xyz
   principal-attribute: preferred_username
   realm: IamOrderMatching
   public-client: 'true'
   resource: iam-ordermatching
+  use-resource-role-mappings : false
+  bearer-only: true
 
 logging:
   level:
