--- a/back-end/project-capstone/03-nus-order-matching-service/03-order-matching-service/pom.xml
+++ b/back-end/project-capstone/03-nus-order-matching-service/03-order-matching-service/pom.xml
@@ -107,6 +107,11 @@
             <artifactId>aspectjweaver</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.11</version>
+        </dependency>
     </dependencies>
 
     <build>
