--- a/.github/workflows/deploy-production-backend.yml
+++ b/.github/workflows/deploy-production-backend.yml
@@ -15,6 +15,14 @@ jobs:
       - name: Checkout
         uses: "actions/checkout@v3"
 
+      - name: Install SSH Key
+        uses: shimataro/ssh-key-action@v2
+        with:
+          key: ${{ secrets.PRODUCTION_SSH_PRIVATE_KEY }}
+          known_hosts: "just-a-placeholder-so-we-dont-get-errors"
+
+      - name: Adding Known Hosts
+        run: ssh-keyscan -H ${{ secrets.PRODUCTION_APP_HOST }} >> ~/.ssh/known_hosts
 
       - name: Deploy with rsync
         run: |
@@ -41,6 +49,7 @@ jobs:
             cd $DEPLOY_DIRECTORY && \
             docker compose up -d
           "
+
       - name: Timestamping deployment
         run: |
           ssh ${{ secrets.PRODUCTION_SSH_USERNAME }}@${{ secrets.PRODUCTION_APP_HOST }} \
