--- a/.github/workflows/deploy-production-backend.yml
+++ b/.github/workflows/deploy-production-backend.yml
@@ -29,7 +29,7 @@ jobs:
           ssh ${{ secrets.PRODUCTION_SSH_USERNAME }}@${{ secrets.PRODUCTION_APP_HOST }} \
           " \
             cd $DEPLOY_DIRECTORY && \
-            sudo docker compose up -d
+            sudo docker compose down
           "
 
       - name: Backup configuration
