--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.22.4",
     "keycloak-js": "^19.0.3",
+    "node-forge": "^1.3.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuejs-logger": "^1.5.5",
