[security] Continuing with security implementation

--- a/back-end/project-capstone/03-nus-order-matching-service/03-order-matching-service/pom.xml
+++ b/back-end/project-capstone/03-nus-order-matching-service/03-order-matching-service/pom.xml
@@ -82,6 +82,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpkix-jdk15on</artifactId>
+            <version>1.58</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-spring-boot-starter</artifactId>
         </dependency>
